fix: hacer que la lista de authorities sea inmutable